--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@vueuse/core": "^10.11.0",
+    "@vueuse/nuxt": "^10.11.0",
     "autoprefixer": "^10.4.19",
     "nuxt": "^3.11.2",
     "postcss": "^8.4.38",
