--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier . --write"
   },
   "dependencies": {
+    "@nuxt/icon": "^1.0.0",
     "@vueuse/core": "^10.11.0",
     "@vueuse/nuxt": "^10.11.0",
     "autoprefixer": "^10.4.19",
